territory report working except for generate ppt
